# obsiPub

./: pyproject.toml
obsipub/: __init__.py  config.py  funcs.py  md.py  server.py
scripts/: test.py
tests/: test_dummy.py
